--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Page Title -->
-    <title>Eze k. Solomon | Frontend Developer</title>
+    <title>Solomon Eze | Frontend Developer</title>
 
     <!-- Meta Description -->
     <meta
